# gm

./: .env  .gitignore  .metahash  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  codec.rs  config.rs  contract.rs  contract_panic_test.rs  contract_test.rs  gm.meta.txt  handle.rs  handle_panic_test.rs  handle_test.rs  init.rs  init_test.rs  lib.rs  meta.txt  metadata.rs  query.rs  query_test.rs  rust-toolchain  transaction.rs
.github/workflows/: build.yml
config/: Cargo.toml  lib.rs
contract/: Cargo.toml  contract_panic_test.rs  contract_test.rs  erc1155_gear_ext.rs  lib.rs
interface/: Cargo.toml  lib.rs
io/: Cargo.toml  config.rs  lib.rs  types.rs
io/contract/: erc1155.rs  erc1155_check.rs  erc1155_gear_ext.rs  mod.rs  token_metadata_registry.rs
io/src/: lib.rs
labs/counter/: Cargo.toml  lib.rs
labs/counter-state/: Cargo.toml  lib.rs
labs/counter-state-init/: Cargo.toml  lib.rs
labs/counter-states/: Cargo.toml  lib.rs
labs/echo/: Cargo.toml  lib.rs
labs/erc1155/: Cargo.toml  config.rs  contract.rs  lib.rs
labs/erc20/: Cargo.toml  config.rs  contract.rs  lib.rs
labs/guess-number/: Cargo.toml  lib.rs
labs/is-odd/: Cargo.toml  lib.rs
labs/memo/: Cargo.toml  lib.rs
labs/nonce/: Cargo.toml  lib.rs
labs/nop/: Cargo.toml  lib.rs
labs/ownable/: Cargo.toml  lib.rs
labs/ownable-config/: Cargo.toml  config.rs  contract.rs  lib.rs
labs/ownable-ledger/: Cargo.toml  config.rs  contract.rs  lib.rs
labs/owner/: Cargo.toml  lib.rs
labs/strlen/: Cargo.toml  README.md  lib.rs
labs/suicide/: Cargo.toml  lib.rs
labs/whoami/: Cargo.toml  codec.rs  handle.rs  init.rs  lib.rs  metadata.rs  query.rs  state.rs
metadata/: Cargo.toml  lib.rs
src/: config.rs  lib.rs  metadata.rs  state.rs
src/contract/: contract_panic_test.rs  contract_test.rs  erc1155.rs  erc1155_check.rs  erc1155_ext.rs  erc1155_metadata_uri.rs  mod.rs
src/handle/: handle_panic_test.rs  handle_test.rs  mod.rs
src/init/: init_test.rs  mod.rs
src/query/: mod.rs  query_test.rs
state/: Cargo.toml  lib.rs
state-counts/: Cargo.toml
state-counts/src/: lib.rs
