[package]
name = "gm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies", "Hangbiao Zou (btwiuse)"]
description = "Gear Multitoken"

[lib]
crate-type = ["rlib"]
name = "gm"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["scale-info"] }
io = { workspace = true }
config = { workspace = true }
contract = { workspace = true }
interface = { workspace = true }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
metadata = { workspace = true }

[workspace]
members = [
  "config",
  "metadata",
  "contract",
  "io",
  "interface",
  "build",
  "state",
  "labs/*",
]

[workspace.dependencies]
io = { path = "io" }
contract = { path = "contract" }
config = { path = "config" }
interface = { path = "interface" }
metadata = { path = "metadata" }
state = { path = "state" }

[profile.dev]
lto = true
opt-level = 's'

[profile.release]
lto = true
opt-level = 's'
