[package]
name = "gm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies", "Hangbiao Zou (btwiuse)"]
description = "Gear Multitoken"

[lib]
crate-type = ["rlib"]
name = "gm"

[dependencies]
io = { workspace = true }
config = { workspace = true }
contract = { workspace = true }
interface = { workspace = true }
gstd = { workspace = true }
gmeta = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
num-traits = { workspace = true }
primitive-types = { workspace = true }

[dev-dependencies]
gtest = { workspace = true }

[build-dependencies]
metadata = { workspace = true }
gear-wasm-builder = { workspace = true }

[workspace]
members = [
  "config",
  "metadata",
  "contract",
  "io",
  "interface",
  "build",
  "state",
  "labs/*",
]

[workspace.dependencies]
io = { path = "io" }
contract = { path = "contract" }
config = { path = "config" }
interface = { path = "interface" }
metadata = { path = "metadata" }
state = { path = "state" }
scale-info = { version = "2" }
parity-scale-codec = { version = "3" }
num-traits = { version = "0.2" }
primitive-types = { version = "0.12.0" }
gstd = { git = "https://github.com/gear-tech/gear.git" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
gtest = { git = "https://github.com/gear-tech/gear.git" }
gmeta = { git = "https://github.com/gear-tech/gear.git" }

[profile.dev]
lto = true
opt-level = 's'

[profile.release]
lto = true
opt-level = 's'
