[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
io = { workspace = true }
gstd = { workspace = true }
gmeta = { workspace = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
num-traits = { workspace = true }
primitive-types = { workspace = true }
