[package]
name = "metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
io = { path = "../io" }
config = { path = "../config" }
contract = { path = "../contract" }
interface = { path = "../interface" }
gstd = { git = "https://github.com/gear-tech/gear.git" }
gmeta = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
num-traits = { version = "0.2", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["scale-info"] }
