[package]
name = "metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
io = { workspace = true }
config = { workspace = true }
contract = { workspace = true }
interface = { workspace = true }
gstd = { workspace = true }
gmeta = { workspace = true }

num-traits = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
primitive-types = { workspace = true, default-features = false, features = ["scale-info"] }
