[package]
name = "state"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
io = { workspace = true }
config = { workspace = true }
metadata = { workspace = true }
interface = { workspace = true }
gstd = { workspace = true }
gmeta = { workspace = true, features = ["codegen"] }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]
