[package]
name = "counter-states"
version = "0.1.0"
edition = "2021"
description = "a gear contract that counts"
license = "MIT"
authors = ["btwiuse"]

[lib]
path = "lib.rs"

[dependencies]
gstd = { git = "https://github.com/btwiuse/gear.git", features = ["debug"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }

[dev-dependencies]
gtest = { git = "https://github.com/btwiuse/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/btwiuse/gear.git" }
