[package]
name = "erc1155"
version = "0.1.0"
edition = "2021"
description = "a gear contract implementing the Ownable & Ledger trait"
license = "MIT"
authors = ["btwiuse"]

[lib]
path = "lib.rs"

[dependencies]
gstd = { git = "https://github.com/btwiuse/gear.git", features = ["debug"] }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/btwiuse/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/btwiuse/gear.git" }
