[package]
name = "memo"
version = "0.1.0"
edition = "2021"
description = "a gear contract that logs its input"
license = "MIT"
authors = ["btwiuse"]

[lib]
path = "lib.rs"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
